Project

General

Profile

Actions

Bug #65595

open

mds: missing policylock acquisition for quiesce

Added by Patrick Donnelly 14 days ago. Updated 2 days ago.

Status:
Pending Backport
Priority:
High
Category:
Correctness/Safety
Target version:
% Done:

0%

Source:
Development
Tags:
backport_processed
Backport:
squid
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
MDS, quiesce
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

In order to check an inode's F_QUIESCE_BLOCK, the quiesce_inode op must acquire the policylock. Furthermore, to ensure the F_QUIESCE_BLOCK is not changed during quiesce, the lock must be held for the duration of the op's lifetime.


Related issues 1 (1 open0 closed)

Copied to CephFS - Backport #65740: squid: mds: missing policylock acquisition for quiesceNewPatrick DonnellyActions
Actions #1

Updated by Patrick Donnelly 14 days ago

  • Status changed from New to Fix Under Review
  • Pull request ID set to 57010
Actions #2

Updated by Patrick Donnelly 3 days ago

  • Status changed from Fix Under Review to Pending Backport
Actions #3

Updated by Backport Bot 3 days ago

  • Copied to Backport #65740: squid: mds: missing policylock acquisition for quiesce added
Actions #4

Updated by Backport Bot 3 days ago

  • Tags set to backport_processed
Actions #5

Updated by Leonid Usov 3 days ago

  • Component(FS) quiesce added
  • Component(FS) deleted (MDS)
Actions #6

Updated by Leonid Usov 2 days ago

  • Component(FS) MDS added
Actions

Also available in: Atom PDF